tests/NormalTests/paczka1/fuzzy1/67883756.err
Error in line 2: DE8bdpSj A766 24,1
Error in line 13: Mx2iWdA6oy A394 88,9
